--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -16,3 +16,5 @@ ja:
         address: 住所
         self_introduction: 自己紹介文
         avatar: ユーザ画像
+        unfollow: フォロー解除
+        follow: フォローする
